[tool.poetry]
name = "fixedcal"
version = "1.0.0"
description = "Fixed calendar package"
authors = ["PyryL <pyry@pyry.info>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.8"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
